Add manifest, tiered fallbacks, tests and docs to WalToParquet
Builds on the initial single-file utility with the items the original
forensic-recovery plan called for:

Manifest: per-table JSON manifest sits next to the Parquet files and
records every segment the tool saw (written, skipped, or partial), every
structural-change transaction in seqTxn order, the txnlog format/maxTxn
header, and per-segment reasons. The operator now has a machine-readable
trail of what was recovered vs lost.

Per-row shoulder columns: _wal_id, _segment_id, _segment_txn, _seq_txn,
_commit_ts are emitted by default so downstream consumers can dedupe
recovered rows against whatever survives in the base table. The
_segment_txn is derived per-row by replaying the segment's _event,
seq_txn and commit_ts are mapped from the txnlog records. Opt out with
--no-shoulder.

Tier 2 (txnlog corrupt or missing): falls back to a filesystem scan of
wal*/N/ directories. Cross-segment seqTxn ordering is unknown so files
are written as <table>__wal<N>__seg<N>__tier2.parquet and the manifest
reflects it.

Tier 3 (segment _event corrupt or missing): row count is derived from
the timestamp .d file size (16 B/row in WAL), and a direct-mmap
emission path bypasses WalReader (which itself requires _event). SYMBOL
columns are resolved from the WAL's on-disk symbol files - the base
table snapshot at WAL open time - so codes referencing new-in-WAL
symbols (which lived only in _event) are clamped to NULL. The manifest
notes how many rows were affected per column. Files are suffixed
__tier3.parquet.

Tier 4 (segment _meta corrupt): peer-segment schema substitution. The
tool scans other wal*/N/ directories for the same table, finds the
first segment with a readable _meta, and uses that as a schema source.
The schema may not match exactly if columns were added or dropped
between segments; the manifest flags this. Composes with tier 3 so a
segment missing both _meta and _event still recovers.

Partial column file loss: pr